Fix deprecated Gradle API usage scheduled to be removed in Gradle 9.0 (#14781)
With Gradle 9.0 approaching soon, this fixes incompatibilities with Gradle 9.0 by
fixing two types of deprecated api usage in the build logic:

1. The org.gradle.api.plugins.JavaPluginConvention type has been deprecated
2. The Project.exec(Closure) method has been deprecated.

--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.changes-to-html.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.changes-to-html.gradle
@@ -68,6 +68,13 @@ class ChangesToHtmlTask extends DefaultTask {
   @InputFile
   def script
 
+  private ExecOperations execOperations;
+
+  @Inject
+  ChangesToHtmlTask(ExecOperations execOperations) {
+    this.execOperations = execOperations
+  }
+
   def loadVersions(File outfile) {
     // load version properties from DOAP RDF
     def prefix = "doap.${productName}".toString()
@@ -80,7 +87,7 @@ class ChangesToHtmlTask extends DefaultTask {
 
   def toHtml(File versionsFile) {
     def output = new ByteArrayOutputStream()
-    def result = project.exec {
+    def result = execOperations.exec {
       executable project.externalTool("perl")
       standardInput = changesFile.newInputStream()
       standardOutput = project.file("${targetDir.get().getAsFile()}/Changes.html").newOutputStream()
