--- a/build-tools/build-infra/src/main/groovy/lucene.java.core.mrjar.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java.core.mrjar.gradle
@@ -32,9 +32,14 @@ configure(project(":lucene:core")) {
       tasks.named("compileMain${jdkVersion}Java").configure {
         def apijar = apijars.file("jdk${jdkVersion}.apijar")
 
+        // TODO: this depends on the order of argument configuration...
         int releaseIndex = options.compilerArgs.indexOf("--release")
         options.compilerArgs.removeAt(releaseIndex)
         options.compilerArgs.removeAt(releaseIndex)
+
+        // Remove conflicting options for the linter. #14782
+        options.compilerArgs.removeAll("-Xlint:options")
+
         options.compilerArgs += [
           "-Xlint:-options",
           "--add-exports",
@@ -43,9 +48,6 @@ configure(project(":lucene:core")) {
           "--add-exports",
           "java.base/jdk.incubator.vector=ALL-UNNAMED",
         ]
-
-        // hack because -Xlint:-options does not work for all options (regression in JDK 25+): #14782
-        options.compilerArgs.remove("-Werror")
 
         def argsProvider = objects.newInstance(CompilerArgsProvider)
         argsProvider.apiJarFile.set(apijar)
