--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -26,14 +26,18 @@ repositories {
   gradlePluginPortal()
 }
 
+// Convert a plugin dependency to a regular dependency so that we can
+// use [plugins] section in the top-level toml but declare regular
+// project dependencies here.
 static Provider<String> plugin(Provider<PluginDependency> plugin) {
   return plugin.map {
-    if (it.pluginId == "com.carrotsearch.gradle.buildinfra") {
-      return "${it.pluginId}:${it.pluginId}.gradle.plugin:${it.version}".toString()
-    } else if (it.pluginId == "de.thetaphi.forbiddenapis") {
+    if (it.pluginId == "de.thetaphi.forbiddenapis") {
+      // Uwe's forbiddenapis is on Maven Central, directly.
       return "de.thetaphi:forbiddenapis:${it.version}".toString()
     } else {
-      return "${it.pluginId}:${it.pluginId.replaceFirst(".*\\.", "")}-plugin-gradle:${it.version}".toString()
+      // maven artifact pattern for gradle's plugin repositories.
+      return "${it.pluginId}:${it.pluginId}.gradle.plugin:${it.version}".toString()
+      // return "${it.pluginId}:${it.pluginId.replaceFirst(".*\\.", "")}-plugin-gradle:${it.version}".toString()
     }
   }
 }
@@ -44,7 +48,8 @@ dependencies {
   implementation deps.commons.codec
   implementation deps.randomizedtesting.runner
 
-  implementation plugin(deps.plugins.carrotsearch.buildinfra)
+  implementation plugin(deps.plugins.carrotsearch.buildopts)
+  implementation plugin(deps.plugins.carrotsearch.dependencychecks)
   implementation plugin(deps.plugins.forbiddenapis)
   implementation plugin(deps.plugins.spotless)
 }
