--- a/build-tools/build-infra/src/main/groovy/lucene.java.jar-manifest.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java.jar-manifest.gradle
@@ -15,7 +15,7 @@
  * limitations under the License.
  */
 
-import com.carrotsearch.gradle.buildinfra.environment.GitInfoExtension
+import org.apache.lucene.gradle.plugins.gitinfo.GitInfoExtension
 
 // Configures artifact JARs (manifest entries)
 
