--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -96,7 +96,8 @@ zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
 
 [plugins]
 benmanes-versions = "com.github.ben-manes.versions:0.52.0"
-carrotsearch-buildinfra = "com.carrotsearch.gradle.buildinfra:0.0.12"
+carrotsearch-buildopts = "com.carrotsearch.gradle.opts:0.2.0"
+carrotsearch-dependencychecks = "com.carrotsearch.gradle.dependencychecks:0.1.0"
 errorprone = "net.ltgt.errorprone:4.2.0"
 forbiddenapis = "de.thetaphi.forbiddenapis:3.9"
 jacocolog = "org.barfuin.gradle.jacocolog:3.1.0"
