--- a/lucene/distribution/build.gradle
+++ b/lucene/distribution/build.gradle
@@ -15,6 +15,9 @@
  * limitations under the License.
  */
 
+
+import org.apache.lucene.gradle.plugins.gitinfo.GitInfoExtension
+
 import java.nio.charset.StandardCharsets
 import java.nio.file.Files
 
@@ -33,7 +36,8 @@ ext {
 }
 
 // Collect git revision.
-MapProperty<String, String> gitStatus = rootProject.extensions.getByName("gitinfo").getGitInfo()
+GitInfoExtension gitInfoExt = rootProject.extensions.getByName("gitinfo")
+MapProperty<String, String> gitStatus = gitInfoExt.getGitInfo()
 Provider<String> gitRev = gitStatus.getting("git.commit")
 
 // Prepare the "source" distribution artifact. We use raw git export, no additional complexity needed.
@@ -51,7 +55,7 @@ tasks.register("assembleSourceTgz", {
       workingDir = project.rootDir
 
       // An explicit GIT_DIR to prevent .git upward scanning if something goes wrong.
-      environment("GIT_DIR", dotGitPath.toString())
+      environment("GIT_DIR", gitInfoExt.getDotGitDir().get().asFile)
 
       args += [
         "archive",
