Use allOptions in gradle upgrade workflow. Remove references to testOpts.

--- a/.github/workflows/run-checks-gradle-upgrade.yml
+++ b/.github/workflows/run-checks-gradle-upgrade.yml
@@ -85,7 +85,7 @@ jobs:
             git reset --hard && git clean -xfd .
           fi
 
-      - run: ./gradlew testOpts
+      - run: ./gradlew allOptions
       - run: ./gradlew helpWorkflow
       - run: ./gradlew licenses updateLicenses
       - run: ./gradlew check -x test
