--- a/build-tools/build-infra/src/main/groovy/lucene.validation.jar-checks.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.jar-checks.gradle
@@ -297,7 +297,7 @@ configure(project(":lucene")) {
   def updateLicenses = tasks.register("updateLicenses", {
     group = 'Dependency validation'
     description = "Write or update checksums of dependencies. May need to run gradlew --write-locks first if changing dependency versions"
-    dependsOn "jarInfoTasks"
+    dependsOn jarInfoTasks
 
     doLast {
       licensesDir.asFile.mkdirs()
