--- a/build-tools/build-infra/src/main/groovy/lucene.validation.jar-checks.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.jar-checks.gradle
@@ -334,7 +334,13 @@ configure(project(":lucene")) {
   // We add an ordering constraint that any validation task (or its dependency subgraph)
   // must run after updateLicenses
   configure(subprojects) {
-    tasks.matching { it.name in ["licenses", "validateJarChecksums", "validateJarLicenses"] }.configureEach {
+    tasks.matching {
+      it.name in [
+        "licenses",
+        "validateJarChecksums",
+        "validateJarLicenses"
+      ]
+    }.configureEach {
       mustRunAfter updateLicenses
     }
   }
