--- a/.github/workflows/run-checks-gradle-upgrade.yml
+++ b/.github/workflows/run-checks-gradle-upgrade.yml
@@ -85,10 +85,10 @@ jobs:
             git reset --hard && git clean -xfd .
           fi
 
-      - run: ./gradlew testOpts
+      - run: ./gradlew allOptions
       - run: ./gradlew helpWorkflow
       - run: ./gradlew licenses updateLicenses
-      - run: ./gradlew check -x test -Pvalidation.git.failOnModified=false
+      - run: ./gradlew check -x test
       - run: ./gradlew assembleRelease mavenToLocal
 
       # Conserve resources: only run these in non-alt-java mode.
