--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
@@ -32,6 +32,7 @@ configure(allprojects) { prj ->
         lineEndings = LineEnding.UNIX
         endWithNewline()
         googleJavaFormat(deps.versions.googleJavaFormat.get())
+        removeUnusedImports()
 
         // Apply to all Java sources
         target("src/**/*.java")
