Remove wildcard imports from the code.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
@@ -35,7 +35,11 @@ configure(allprojects) { prj ->
         googleJavaFormat(deps.versions.googleJavaFormat.get())
 
         // Idea from: https://github.com/opensearch-project/opensearch-java/pull/1180/files
-        custom("Wildcard imports disallowed ", new WildcardImportDetector())
+        // we have to add some manual exclusions because wildcard detector can't fix the wildcard import -
+        // it can only detect them and fail the build. This matters for some generated files, which
+        // are a pain to fix.
+        def wildcardDetector = new WildcardImportDetector()
+        custom("Wildcard imports disallowed ", wildcardDetector)
 
         // Apply to all Java sources
         target("src/**/*.java")
@@ -61,6 +65,7 @@ configure(allprojects) { prj ->
             break
 
           case ":lucene:expressions":
+            wildcardDetector.addExcludedFiles("JavascriptLexer.java", "JavascriptParser.java")
             break
 
           case ":lucene:queryparser":
