--- a/.github/workflows/run-special-checks-sandbox.yml
+++ b/.github/workflows/run-special-checks-sandbox.yml
@@ -26,16 +26,18 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Install Faiss
-        uses: mamba-org/setup-micromamba@b09ef9b599704322748535812ca03efb2625677b #v2.0.5
-        id: setup
+      - name: Install Mamba
+        uses: conda-incubator/setup-miniconda@835234971496cad1653abb28a638a281cf32541f #v3.2.0
         with:
-          environment-name: faiss-env
+          miniforge-version: 'latest'
+          auto-activate-base: 'false'
+          activate-environment: 'faiss-env'
           # TODO: Use only conda-forge if possible, see https://github.com/conda-forge/faiss-split-feedstock/pull/88
-          create-args: >-
-            -c pytorch
-            -c conda-forge
-            faiss-cpu=${{ matrix.faiss-version }}
+          channels: 'pytorch,conda-forge'
+          conda-remove-defaults: 'true'
+
+      - name: Install Faiss
+        run: mamba install faiss-cpu=${{ matrix.faiss-version }}
 
       - name: Checkout Lucene
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -44,9 +46,12 @@ jobs:
         uses: ./.github/actions/prepare-for-build
 
       - name: Run tests for Faiss codec
-        env:
-          LD_LIBRARY_PATH: ${{ steps.setup.outputs.environment-path }}/lib
-        run: ./gradlew -p lucene/sandbox -Dtests.faiss.run=true test --tests "org.apache.lucene.sandbox.codecs.faiss.*"
+        run: >
+          LD_LIBRARY_PATH=$CONDA_PREFIX/lib
+          ./gradlew -p lucene/sandbox
+          -Dtests.faiss.run=true
+          test
+          --tests "org.apache.lucene.sandbox.codecs.faiss.*"
 
     defaults:
       run:
