--- a/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
@@ -18,6 +18,7 @@
 import com.carrotsearch.gradle.buildinfra.buildoptions.BuildOptionValueSource
 import com.carrotsearch.gradle.buildinfra.buildoptions.BuildOptionsPlugin
 import org.apache.lucene.gradle.plugins.gitinfo.GitInfoPlugin
+import org.apache.lucene.gradle.plugins.astgrep.AstGrepPlugin
 import com.carrotsearch.randomizedtesting.SeedUtils
 
 import java.time.ZonedDateTime
@@ -32,10 +33,13 @@ if (project != project.rootProject) {
 //
 // Register these plugins early.
 //
-plugins.apply(GitInfoPlugin)
 allprojects {
   plugins.apply(BuildOptionsPlugin)
 }
+
+plugins.apply(BasePlugin)
+plugins.apply(GitInfoPlugin)
+plugins.apply(AstGrepPlugin)
 
 //
 // Figure out project version based on the base version and, suffix (or overrides of these options).
@@ -157,9 +161,15 @@ configure(project(":lucene:core")) {
 buildOptions.addOption("lucene.tool.python3", "External python3 executable (path or name)", "python3")
 buildOptions.addOption("lucene.tool.perl", "External perl executable (path or name)", "perl")
 buildOptions.addOption("lucene.tool.git", "External git executable (path or name)", "git")
+buildOptions.addOption("lucene.tool.ast-grep", "External ast-grep executable (path or name)")
 
 ext.externalTool = { String name ->
-  if (name in ["python3", "perl", "git"]) {
+  if (name in [
+        "python3",
+        "perl",
+        "git",
+        "ast-grep"
+      ]) {
     return buildOptions.getOption("lucene.tool." + name).asStringProvider().get()
   }
   throw new GradleException("External tool named '${name}' is not defined.")
