--- a/.github/workflows/run-checks-all.yml
+++ b/.github/workflows/run-checks-all.yml
@@ -34,6 +34,12 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: Install ast-grep, if not on windows
+        if: ${{ ! startsWith(matrix.os, 'windows') }}
+        run: |
+          npm -g i @ast-grep/cli
+          echo "lucene.tool.ast-grep=ast-grep" >> build-options.local.properties
+
       - name: Correct git autocrlf
         run: git config --global core.autocrlf false
 
