Hook up ast grep with tidy and check. Add a small help section on ast-grep.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.error-prone.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.error-prone.gradle
@@ -97,9 +97,6 @@ allprojects { prj ->
             break
 
           case ":lucene:expressions":
-            options.errorprone.excludedPaths.set("" +
-            ".*/JavascriptParser.java|" +
-            ".*/JavascriptLexer.java")
             break
 
           case ":lucene:queryparser":
@@ -334,7 +331,7 @@ allprojects { prj ->
           '-Xep:UnsafeWildcard:ERROR',
           '-Xep:UnusedAnonymousClass:ERROR',
           '-Xep:UnusedCollectionModifiedInPlace:ERROR',
-          "-Xep:WildcardImport:ERROR",
+          // "-Xep:WildcardImport:ERROR", // we use ast-grep for this check.
           '-Xep:VarTypeName:ERROR',
           // '-Xep:WrongOneof:OFF', // we don't use protobuf
           '-Xep:XorPower:ERROR',
