--- a/.github/workflows/run-checks-all.yml
+++ b/.github/workflows/run-checks-all.yml
@@ -40,6 +40,13 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: ./.github/actions/prepare-for-build
 
+      - name: Install ast-grep, if not on windows
+        if: ${{ ! startsWith(matrix.os, 'windows') }}
+        run: |
+          npm -g i @ast-grep/cli
+          echo "lucene.tool.ast-grep=ast-grep" >> build-options.local.properties
+          ls -l .
+
       - name: Run gradle check (without tests)
         run: ./gradlew check -x test "-Ptask.times=true" --max-workers 2
 
