--- a/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
@@ -161,14 +161,12 @@ configure(project(":lucene:core")) {
 buildOptions.addOption("lucene.tool.python3", "External python3 executable (path or name)", "python3")
 buildOptions.addOption("lucene.tool.perl", "External perl executable (path or name)", "perl")
 buildOptions.addOption("lucene.tool.git", "External git executable (path or name)", "git")
-buildOptions.addOption("lucene.tool.ast-grep", "External ast-grep executable (path or name)")
 
 ext.externalTool = { String name ->
   if (name in [
         "python3",
         "perl",
-        "git",
-        "ast-grep"
+        "git"
       ]) {
     return buildOptions.getOption("lucene.tool." + name).asStringProvider().get()
   }
