--- a/gradle/validation/ast-grep/rules/no-wildcard-imports.sg.yaml
+++ b/gradle/validation/ast-grep/rules/no-wildcard-imports.sg.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/ast-grep/ast-grep/refs/heads/main/schemas/java_rule.json
 id: wildcard-import-not-allowed
 language: java
 rule:
