--- a/gradle/validation/ast-grep/rules/no-wildcard-imports.sg.yaml
+++ b/gradle/validation/ast-grep/rules/no-wildcard-imports.sg.yaml
@@ -8,7 +8,7 @@ rule:
 severity: error
 message: don't use wildcard imports
 note: please use full imports instead
-url: https://google.github.io/styleguide/javaguide.html?cl=head#s3.3.1-wildcard-imports
+url: https://errorprone.info/bugpattern/WildcardImport
 files:
   - "**/*.java"
 ignores:
