error-prone: replace ComparingThisWithNull with ast-grep rule
This is just an example of a dead-simple check to cross off the list.

organize the error-prone rules into an errorprone.yml file with matching
linter IDs.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.error-prone.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.error-prone.gradle
@@ -162,7 +162,7 @@ allprojects { prj ->
           // '-Xep:CheckReturnValue:OFF', // we don't use these annotations
           '-Xep:CollectionToArraySafeParameter:ERROR',
           // '-Xep:ComparableType:OFF',
-          '-Xep:ComparingThisWithNull:ERROR',
+          // '-Xep:ComparingThisWithNull:ERROR', // we use ast-grep for this check
           '-Xep:ComparisonOutOfRange:ERROR',
           // '-Xep:CompatibleWithAnnotationMisuse:OFF', // we don't use this annotation
           // '-Xep:CompileTimeConstant:OFF', // we don't use this annotation
