error-prone: implement BanClassLoader with forbidden-apis instead
This rule is attempting to ban dangerous usages of ClassLoader which
could be security hazard (IMO a good idea). forbidden APIs is a good
tool for banning, just like we use forbidden-apis to ban JNDI and other
things.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.error-prone.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.error-prone.gradle
@@ -153,7 +153,7 @@ allprojects { prj ->
           // '-Xep:AutoValueConstructorOrderChecker:OFF', // we don't use autovalue
           '-Xep:BadAnnotationImplementation:ERROR',
           '-Xep:BadShiftAmount:ERROR',
-          '-Xep:BanClassLoader:ERROR',
+          // '-Xep:BanClassLoader:OFF', // implemented with forbidden APIs instead
           // '-Xep:BanJNDI:OFF', // implemented with forbidden APIs instead
           // '-Xep:BoxedPrimitiveEquality:OFF', // TODO: there are problems
           // '-Xep:BundleDeserializationCast:OFF', // we don't use android
