add another rule test

--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -12,3 +12,4 @@ invalid:
   - var x = new HashSet<>(foo);
 valid:
   - HashSet<String> x = new HashSet<>();
+  - var list = new ArrayList<String>();
