--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,8 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = lf # matches spotless.gradle insistence on this
+# matches spotless.gradle insistence on this
+end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
