fix incorrect python line length due to deletion of dev-tools file
Otherwise it is inconsistent with ruff formatter and causes chaos

--- a/.editorconfig
+++ b/.editorconfig
@@ -618,6 +618,10 @@ ij_properties_keep_blank_lines = true
 ij_properties_key_value_delimiter = equals
 ij_properties_spaces_around_key_value_delimiter = false
 
+[*.py]
+# must be consistent with ruff formatter settings
+max_line_length = 200
+
 [{*.yaml,*.yml}]
 ij_yaml_align_values_properties = do_not_align
 ij_yaml_autoinsert_sequence_marker = true
