style: fix gradle to write newlines for its checksums
Please note: the ugly formatting in the gradle code change is a consequence of the editorconfig
max-line-length set, don't shoot the messenger.

--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.gradle
@@ -219,7 +219,8 @@ configure([
           // Recompute checksums after the task has completed and write them.
           def updatedChecksums = computeChecksummedEntries(sourceTask)
           checksumsFile.setText(
-              JsonOutput.prettyPrint(JsonOutput.toJson(new TreeMap<String, String>(updatedChecksums))), "UTF-8")
+              JsonOutput.prettyPrint(JsonOutput.toJson(new TreeMap<String,
+              String>(updatedChecksums))) + '\n', "UTF-8")
 
           logger.warn("Updated generated file checksums for task ${sourceTask.path}.")
         }
