Add a Faiss KNNVectorsFormat (Codec component) for KNN searches (#14178)
Faiss is Meta's open source library for approximate KNN search.  It implements multiple algorithms and
quantization choices.  This change simply wraps its C API into an experimental KnnVectorsFormat using
Java's Foreign Function & Memory (FFM)  API.  This means you can make a custom Lucene Codec which
uses this for KNN indexing and searching.

Note that this is native (C) code, so it's possible it has bugs that trigger SIGSEGV and then the OS
rapidly tears down the JVM, or a subtle/slow memory leak outside of the JVM's heap visibility.

This new format is experimental, might have exciting bugs, and has no promise of backwards compatibility.
PRs welcome!

Co-authored-by: Kaival Parikh <kaivalp2000@gmail.com>

--- a/build-tools/build-infra/src/main/groovy/lucene.java.tests-and-randomization.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java.tests-and-randomization.gradle
@@ -147,6 +147,9 @@ buildOptions.addOption("tests.file.encoding", "Sets the default file.encoding on
   ])
 })
 
+buildOptions.addBooleanOption("tests.faiss.run", "Explicitly run tests for the Faiss codec.", false)
+optionsInheritedAsProperties += ["tests.faiss.run"]
+
 // TODO: do we still use these?
 // Test data file used.
 // [propName: 'tests.linedocsfile', value: 'europarl.lines.txt.gz', description: "Test data file path."],
