--- a/gradle/java/core-mrjar.gradle
+++ b/gradle/java/core-mrjar.gradle
@@ -17,7 +17,10 @@
 
 // Produce an MR-JAR with Java 19+ foreign and vector implementations
 
-configure(project(":lucene:core")) {
+configure([
+        project(":lucene:core"),
+        project(":lucene:sandbox"),
+]) {
   plugins.withType(JavaPlugin) {
     mrjarJavaVersions.each { jdkVersion ->
       sourceSets.create("main${jdkVersion}") {
@@ -27,6 +30,7 @@ configure(project(":lucene:core")) {
       }
       configurations["main${jdkVersion}Implementation"].extendsFrom(configurations['implementation'])
       dependencies.add("main${jdkVersion}Implementation", sourceSets.main.output)
+      dependencies.add("testImplementation", sourceSets["main${jdkVersion}"].output)
 
       tasks.named("compileMain${jdkVersion}Java").configure {
         def apijar = apijars.file("jdk${jdkVersion}.apijar")
