--- a/build-tools/build-infra/build.gradle
+++ b/build-tools/build-infra/build.gradle
@@ -68,6 +68,8 @@ dependencies {
   implementation deps.flexmark.ext.attributes
   implementation deps.flexmark.ext.autolink
   implementation deps.flexmark.ext.tables
+  implementation deps.gjf
+  implementation deps.javadiff
 
   implementation plugin(deps.plugins.carrotsearch.buildopts)
   implementation plugin(deps.plugins.carrotsearch.dependencychecks)
