--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
@@ -17,6 +17,7 @@
 
 import com.diffplug.gradle.spotless.SpotlessPlugin
 import com.diffplug.spotless.LineEnding
+import org.apache.lucene.gradle.plugins.spotless.CheckGoogleJavaFormatTask
 
 /*
  * LUCENE-9564: This adds automatic (and enforced) code formatting using
@@ -27,6 +28,12 @@ configure(allprojects) { prj ->
   plugins.apply(SpotlessPlugin)
 
   plugins.withType(JavaPlugin).configureEach {
+    tasks.register("checkGoogleJavaFormat", CheckGoogleJavaFormatTask, {
+      sourceFiles = project.fileTree("src", {
+        include "**/*.java"
+      })
+    })
+
     spotless {
       java {
         lineEndings = LineEnding.UNIX
