--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ plugins {
 
   id "lucene.validation.spotless-groovy"
   id "lucene.validation.spotless-java"
+  id "lucene.validation.google-java-format"
   id "lucene.validation.lockfile"
   id "lucene.validation.gradle-versions-cleanup"
   id "lucene.validation.gradlew-scripts-customizations"
