Implemented diff based on spotless/jgit diff. Colorized output. Added a tunable 'lucene.gjf.batchSize' build option to tweak worker action batch size (doesn't make any difference for me).

--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -37,7 +37,6 @@ static Provider<String> plugin(Provider<PluginDependency> plugin) {
     } else {
       // maven artifact pattern for gradle's plugin repositories.
       return "${it.pluginId}:${it.pluginId}.gradle.plugin:${it.version}".toString()
-      // return "${it.pluginId}:${it.pluginId.replaceFirst(".*\\.", "")}-plugin-gradle:${it.version}".toString()
     }
   }
 }
@@ -47,6 +46,8 @@ dependencies {
   implementation localGroovy()
   implementation deps.commons.codec
   implementation deps.randomizedtesting.runner
+  implementation deps.gjf
+  implementation deps.jgit
 
   implementation plugin(deps.plugins.carrotsearch.buildopts)
   implementation plugin(deps.plugins.carrotsearch.dependencychecks)
