--- a/build-tools/build-infra/src/main/groovy/lucene.validation.rat-sources.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.rat-sources.gradle
@@ -48,6 +48,7 @@ allprojects {
       if (project.path == ":") {
         exclude "lucene"
         exclude "**/build"
+        include "build-tools/build-infra/**"
       } else {
         exclude subprojects.collect { it.projectDir.name }
       }
@@ -60,6 +61,9 @@ allprojects {
       include "**/*.py"
       include "**/*.sh"
       include "**/*.bat"
+
+      // Any .gradle folder in composite or top-level project.
+      exclude "**/.gradle/**"
 
       // Include selected patterns from any source folders. We could make this
       // relative to source sets but it seems to be of little value - all our source sets
