--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,12 +22,12 @@ groovy = "4.0.27"
 hamcrest = "3.0"
 # analysis/icu/, gradle regeneration unicode support
 icu4j = "77.1"
-# build infra only (diff of changes from google java format tasks)
-javadiff = "4.15"
 # queryparsers/ grammars
 javacc = "7.0.13"
 # analysis/ tokenizer grammars
 jflex = "1.9.1"
+# build infra only (diff of changes from google java format tasks)
+jgit = "7.3.0.202506031305-r"
 # benchmark-jmh/ microbenchmarks
 jmh = "1.37"
 # spatial-extras/ support
@@ -79,8 +79,8 @@ groovy = { module = "org.apache.groovy:groovy-all", version.ref = "groovy" }
 hamcrest = { module = "org.hamcrest:hamcrest", version.ref = "hamcrest" }
 icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
 javacc = { module = "net.java.dev.javacc:javacc", version.ref = "javacc" }
-javadiff = { module = "io.github.java-diff-utils:java-diff-utils", version.ref = "javadiff" }
 jflex = { module = "de.jflex:jflex", version.ref = "jflex" }
+jgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version.ref = "jgit" }
 jmh-annprocess = { module = "org.openjdk.jmh:jmh-generator-annprocess", version.ref = "jmh" }
 jmh-core = { module = "org.openjdk.jmh:jmh-core", version.ref = "jmh" }
 jts = { module = "org.locationtech.jts:jts-core", version.ref = "jts" }
