--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.antlr.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.antlr.gradle
@@ -85,8 +85,7 @@ configure(project(":lucene:expressions")) {
   def generateAntlr = wrapWithPersistentChecksums(
       generateAntlrInternal, [
         andThenTasks: [
-          "spotlessJava",
-          "spotlessJavaApply"
+          "applyGoogleJavaFormat"
         ],
         mustRunBefore: ["compileJava"]
       ])
