--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.javacc.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.javacc.gradle
@@ -235,8 +235,7 @@ configure(project(":lucene:queryparser")) {
 
     def extraConfig = [
       andThenTasks: [
-        "spotlessJava",
-        "spotlessJavaApply"
+        "applyGoogleJavaFormat"
       ],
       mustRunBefore: ["compileJava"]
     ]
