--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -1,5 +1,3 @@
-import com.diffplug.gradle.spotless.SpotlessTask
-
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -52,7 +50,6 @@ dependencies {
   implementation plugin(deps.plugins.carrotsearch.buildopts)
   implementation plugin(deps.plugins.carrotsearch.dependencychecks)
   implementation plugin(deps.plugins.forbiddenapis)
-  implementation plugin(deps.plugins.spotless)
 }
 
 tasks.matching {
@@ -70,16 +67,10 @@ tasks.matching {
   enabled = false
 }
 
-// check spotless and other tasks into thinking their sources
-// are from build-infra.
+// make certain tasks think their sources are from build-infra.
 if (!isIdea) {
   plugins.withType(JavaPlugin).configureEach {
     SourceSet main = sourceSets.main
     main.java.srcDirs = rootProject.files("build-tools/build-infra/src/main/java")
-  }
-
-  tasks.withType(SpotlessTask).configureEach {
-    it.projectDir.set(rootProject.file("build-tools/build-infra"))
-    it.target
   }
 }
