--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.gradle
@@ -131,7 +131,7 @@ configure([
     // sourceTask - the task to wrap
     // extraConfig - a map with extra (optional) configuration options.
     //   andThenTasks: any other tasks that should be scheduled to run after the internal task and
-    //     before checksum calculation/ saving. spotless is a good example of this.
+    //     before checksum calculation/ saving. code formatting is a good example of this.
     //   ignoreWithSource: any other tasks that should be ignored if the internal task is ignored
     //     (checksums are identical)
     //   mustRunBefore: any tasks which should be scheduled to run after the internal task.
