--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.moman.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.moman.gradle
@@ -112,8 +112,7 @@ configure(project(":lucene:core")) {
 
     def extraConfig = [
       andThenTasks: [
-        "spotlessJava",
-        "spotlessJavaApply"
+        "applyGoogleJavaFormat"
       ],
       mustRunBefore: ["compileJava"]
     ]
