--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
@@ -63,9 +63,9 @@ if (!spotlessGradleScriptsOption.get()) {
 }
 
 tasks.named("spotlessGradleScripts").configure {
-  mustRunAfter ":lucene:build-tools:missing-doclet:spotlessJava"
+  mustRunAfter ":lucene:build-tools:missing-doclet:applyGoogleJavaFormat"
   mustRunAfter ":lucene:build-tools:missing-doclet:renderJavadoc"
-  mustRunAfter ":lucene:build-tools:build-infra-shadow:spotlessJava"
+  mustRunAfter ":lucene:build-tools:build-infra-shadow:applyGoogleJavaFormat"
   mustRunAfter ":lucene:build-tools:build-infra-shadow:pluginUnderTestMetadata"
   mustRunAfter ":lucene:build-tools:build-infra-shadow:pluginDescriptors"
 }
