--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ ecj = "4.36M1"
 errorprone = "2.38.0"
 # markdown documentation generation
 flexmark = "0.64.8"
-# @keep This is GJF version for spotless/ tidy source code formatting
+# @keep This is GJF version for java source code formatting
 googleJavaFormat = "1.23.0"
 # gradle build support
 groovy = "4.0.27"
