--- a/gradle/template.gradle.properties
+++ b/gradle/template.gradle.properties
@@ -4,7 +4,7 @@
 #
 # The first invocation of any task in Lucene gradlew will generate and save this project-local 'gradle.properties' file.
 # This file contains the defaults you may (but don't have to) tweak for your particular hardware (or taste). Note there
-# are certain settings in that file that may be _required_ at runtime for certain plugins (an example is the spotless/
+# are certain settings in that file that may be _required_ at runtime for certain plugins (an example is the
 # google java format plugin, which requires adding custom exports to JVM modules). gradlew only generates this file
 # if it's not already present (it never overwrites the defaults) -- occasionally you may have to manually delete (or move)
 # this file and regenerate from scratch.
@@ -70,7 +70,7 @@ systemProp.file.encoding=UTF-8
 
 # Set up gradle JVM defaults.
 #
-# We also open up internal compiler modules for spotless/ google java format.
+# We also open up internal compiler modules for google java format.
 org.gradle.jvmargs=-Xmx1g -XX:ReservedCodeCacheSize=256m -XX:TieredStopAtLevel=1 -XX:+UseParallelGC -XX:ActiveProcessorCount=1 \
  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
