Task ordering, removed copy-pasted comment that no longer applies.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.google-java-format.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.google-java-format.gradle
@@ -27,10 +27,12 @@ configure(allprojects) {prj ->
       "lucene.gjf.batchSize", "Sets the batch size for google-java-format tasks.", 5)
 
   plugins.withType(JavaPlugin).configureEach {
+    def applyGoogleJavaFormat = tasks.register("applyGoogleJavaFormat", ApplyGoogleJavaFormatTask)
+
     def checkGoogleJavaFormat = tasks.register("checkGoogleJavaFormat", CheckGoogleJavaFormatTask, {
       colorizedOutput = !rootProject.ext.isCIBuild
+      mustRunAfter applyGoogleJavaFormat
     })
-    def applyGoogleJavaFormat = tasks.register("applyGoogleJavaFormat", ApplyGoogleJavaFormatTask)
 
     [
       checkGoogleJavaFormat,
