Temporarily remove -XX:TieredStopAtLevel=1 -XX:ActiveProcessorCount=1 to see what the results will be on gh.

--- a/gradle/template.gradle.properties
+++ b/gradle/template.gradle.properties
@@ -47,7 +47,7 @@
 # tests.jvms=3
 # tests.heapsize=512m
 # tests.minheapsize=512m
-# tests.jvmargs=-XX:+UseParallelGC -XX:TieredStopAtLevel=1 -XX:ActiveProcessorCount=1
+# tests.jvmargs=-XX:+UseParallelGC
 #
 # See help/localSettings.txt for ways to discover which build options are available and
 # how you can tweak them.
