Moved lucene.java.javac.gradle to a Java plugin.

--- a/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
@@ -17,6 +17,7 @@
 
 import org.apache.lucene.gradle.plugins.spotless.GoogleJavaFormatPlugin
 import org.apache.lucene.gradle.plugins.java.JavaFolderLayoutPlugin
+import org.apache.lucene.gradle.plugins.java.JavacConfigurationPlugin
 
 allprojects { project ->
   if (['src/java', 'src/test'].any {path ->
@@ -25,7 +26,7 @@ allprojects { project ->
     plugins.apply("java-library")
 
     plugins.apply(JavaFolderLayoutPlugin)
-    plugins.apply("lucene.java.javac")
+    plugins.apply(JavacConfigurationPlugin)
     plugins.apply("lucene.java.jar-manifest")
 
     plugins.apply("lucene.java.tests-and-randomization")
