--- a/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
@@ -48,7 +48,10 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
       plusConfigurations += allprojects.findAll{ prj ->
         return prj.plugins.hasPlugin(JavaPlugin)
       }.collectMany {
-        return [ it.configurations.compileClasspath, it.configurations.testCompileClasspath ]
+        return [
+          it.configurations.compileClasspath,
+          it.configurations.testCompileClasspath
+        ]
       }
 
       file {
@@ -134,4 +137,3 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
     inputs.property('eclipseJavaVersion', eclipseJavaVersion as String)
   }
 }
-
