Gradle plugins to java, batch 1 (#14862)
* Move lucene.validation.google-java-format.gradle to java.

* Correct plugin code after refactoring.

* Converted lucene.java.folder-layout.gradle to a java plugin.

* Moved lucene.java.javac.gradle to a Java plugin.

* Move lucene.java.jar-manifest.gradle to a Java plugin.

* Moved some of root project's ext globals into an extension and initialized from Java code (RegisterBuildGlobalsPlugin).

* Moved more ext properties to globals ext.

* Remove comment.

* Make the extension class final.

* Gradle doesn't like final extension classes.

--- a/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
@@ -48,7 +48,10 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
       plusConfigurations += allprojects.findAll{ prj ->
         return prj.plugins.hasPlugin(JavaPlugin)
       }.collectMany {
-        return [ it.configurations.compileClasspath, it.configurations.testCompileClasspath ]
+        return [
+          it.configurations.compileClasspath,
+          it.configurations.testCompileClasspath
+        ]
       }
 
       file {
@@ -139,4 +142,3 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
     inputs.property('eclipseJavaVersion', eclipseJavaVersion as String)
   }
 }
-
